--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         {
             "name": "Ivan Orlov",
             "email": "orlov_mail@mail.ru",
-            "homepage": "http://ivan-orlov.com/",
+            "homepage": "https://orlov.io/",
             "role": "Creator"
         }
     ],
